--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-sm  navbar-light bg-primary">
     <!-- Brand -->
-    <a class="navbar-brand" href="#"><img src="assets/img/BedeliasLogoV1.png" class="rounded" width="65" height="65"></a>
+    <a class="navbar-brand" href="{{rol}}"><img src="assets/img/BedeliasLogoV1.png" class="rounded" width="65" height="65"></a>
   
     <!-- Links -->
 
