--- a/src/app/admin/usuario-form/usuario-form.component.html
+++ b/src/app/admin/usuario-form/usuario-form.component.html
@@ -29,13 +29,13 @@
                                 <div *ngIf="f.email.invalid && (f.email.dirty || f.email.touched || submitted)" class="invalid-feedback">
                                     <div *ngIf="f.email.errors.required">Email es requerido</div>
                                     <div *ngIf="f.email.errors.email">Email debe ser una direccion valida</div>
-                            </div>
+                                </div>
                             </div>
                             <div class="form-group">
                                     <label>Fecha de Nacimiento</label>
                                     <input type="text" formControlName="fechaNacimiento" class="form-control" [(ngModel)]="usuario.fechaNacimiento" [ngClass]="{ 'is-invalid': (submitted || f.fechaNacimiento.touched) && f.fechaNacimiento.errors}"  bsDatepicker [bsConfig]="dpConfig" placement="bottom"/>
                                     <div *ngIf="f.fechaNacimiento.invalid && (f.fechaNacimiento.dirty || f.fechaNacimiento.touched || submitted)  " class="invalid-feedback">
-                                        <div *ngIf="f.fechaNacimiento.errors.required">Nombre es requerido</div>
+                                        <!--<div *ngIf="f.fechaNacimiento.errors.required">Nombre es requerido</div>-->
                                     </div>
                             </div>
                             <div class="form-group">
@@ -69,7 +69,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <button class="btn btn-primary">Register</button>
+                                <button class="btn btn-primary">Agregar</button>
                             </div>
                         </form>
                     </div>
