--- a/src/app/director/body-director/body-director.component.html
+++ b/src/app/director/body-director/body-director.component.html
@@ -3,7 +3,7 @@
       <div class="list-group" id="list-tab" role="tablist">
         <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Carreras</a>
         <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Asignaturas</a>
-        <a class="list-group-item list-group-item-action  disabled" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
+        <a class="list-group-item list-group-item-action " id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Asignar Asignatura</a>
         <a class="list-group-item list-group-item-action  disabled" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
       </div>
     </div>
@@ -12,7 +12,7 @@
       <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list"><h1 class="text-center">CARRERAS</h1><app-lista-carreras></app-lista-carreras></div>
         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><h1 class="text-center">ASIGNATURAS</h1><app-lista-asignaturas></app-lista-asignaturas></div>
-        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
+        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><h1 class="text-center">ASIGNAR ASIGNATURA</h1><app-asignar-asignatura></app-asignar-asignatura></div>
         <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
       </div>
     </div>
