Asignar Previas y reset component

--- a/src/app/director/asignar-asignatura/asignar-asignatura.component.html
+++ b/src/app/director/asignar-asignatura/asignar-asignatura.component.html
@@ -1,4 +1,4 @@
-<accordion>
+<accordion [closeOthers]="true">
   <div *ngFor="let carrera of carreras" >
     <accordion-group heading="{{carrera.nombre}}">      
       <div *ngFor="let asignaturaCarrera of carrera.asignaturaCarrera;let i = index" >
