--- a/src/app/director/body-director/body-director.component.html
+++ b/src/app/director/body-director/body-director.component.html
@@ -4,7 +4,7 @@
         <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Carreras</a>
         <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Asignaturas</a>
         <a class="list-group-item list-group-item-action " id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Asignar Asignatura</a>
-        <a class="list-group-item list-group-item-action  disabled" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Asignar Previa</a>
       </div>
     </div>
   
@@ -13,7 +13,7 @@
         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list"><h1 class="text-center">CARRERAS</h1><app-lista-carreras></app-lista-carreras></div>
         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><h1 class="text-center">ASIGNATURAS</h1><app-lista-asignaturas></app-lista-asignaturas></div>
         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><h1 class="text-center">ASIGNAR ASIGNATURA</h1><app-asignar-asignatura></app-asignar-asignatura></div>
-        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">ASIGNAR PREVIA</h1><app-asignar-previa></app-asignar-previa></div>
       </div>
     </div>
   
