--- a/src/app/director/asignar-asignatura/asignar-asignatura.component.html
+++ b/src/app/director/asignar-asignatura/asignar-asignatura.component.html
@@ -1,30 +1,64 @@
 <accordion [closeOthers]="true">
-  <div *ngFor="let carrera of carreras" >
-    <accordion-group heading="{{carrera.nombre}}">      
-      <div *ngFor="let asignaturaCarrera of carrera.asignaturaCarrera;let i = index" >
-        {{asignaturaCarrera.asignatura.nombre}}
-        <button type="button" class="btn btn-danger btn-sm " (click)="eliminarAsignatura(carrera,asignaturaCarrera.asignatura); carrera.asignaturaCarrera.splice(i,1)">Eliminar </button>
-      </div>
-      <button type="button" class="btn btn-primary btn-sm" (click)="openModal(template,carrera)">Agregar </button>
-      <ng-template #template>
-          <div class="modal-header">
-            <h4 class="modal-title pull-left">Agregar Asignatura</h4>
-            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-              <span aria-hidden="true">&times;</span>
-            </button>
+    <div *ngFor="let carrera of carreras" >
+      <accordion-group heading="{{carrera.nombre}}" (isOpenChange)='cargarListas(carrera)'>  
+        <div class="center" >
+          <p-pickList [responsive]="true" sourceHeader="Asignaturas" targetHeader="Faltantes" 
+          [source]="asignaturas" [target]="asignaturasFaltantes" (onMoveToSource)="onMoveToSource($event)" (onMoveToTarget)="onMoveToTarget($event)">
+              <ng-template let-asignatura pTemplate="item">
+                  <div class="ui-helper-clearfix">
+                      <div >{{asignatura.nombre}}</div>
+                  </div>
+              </ng-template>
+          </p-pickList>  
+        </div>  
+      </accordion-group>
+    </div>   
+  </accordion>
+  
+  
+  
+  <!--;carrera.asignaturaCarrera.push(asignatura.asignaturaCarrera)
+  
+    (onMoveToSource)="agregarAsignatura(carrera,$event.items)"
+  
+     (click)="cargarListas(carrera)"
+  
+    <ng-template #agregar></ng-template>
+  
+  <div *ngFor="let asignaturaCarrera of carrera.asignaturaCarrera"></div>
+  
+  <div *ngIf="!borrar" >
+              <button type="button" class="btn btn-primary btn-sm " (click)="agregarAsignatura(carrera,asignaturaCarrera.asignatura)">Agregar </button>
           </div>
-          <div class="modal-body">
-            <div *ngFor="let asignatura of asignaturas;let i=index">
-              {{asignatura.nombre}}
-              <button type="button" class="btn btn-primary btn-sm"  (click)="agregarAsignatura(carrera,asignatura)">Agregar </button>
+  
+  
+  <accordion [closeOthers]="true">
+    <div *ngFor="let carrera of carreras" >
+      <accordion-group heading="{{carrera.nombre}}">      
+        <div *ngFor="let asignaturaCarrera of carrera.asignaturaCarrera;let i = index" >
+          {{asignaturaCarrera.asignatura.nombre}}
+          <button type="button" class="btn btn-danger btn-sm " (click)="eliminarAsignatura(carrera,asignaturaCarrera.asignatura); carrera.asignaturaCarrera.splice(i,1)">Eliminar </button>
+        </div>
+        <button type="button" class="btn btn-primary btn-sm" (click)="openModal(template,carrera)">Agregar </button>
+        <ng-template #template>
+            <div class="modal-header">
+              <h4 class="modal-title pull-left">Agregar Asignatura</h4>
+              <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
-          </div>
-        </ng-template>
-    </accordion-group>
-  </div>
-   
-</accordion>
-
-
-
-<!--;carrera.asignaturaCarrera.push(asignatura.asignaturaCarrera)-->
+            <div class="modal-body">
+              <div *ngFor="let asignatura of asignaturas;let i=index">
+                {{asignatura.nombre}}
+                <button type="button" class="btn btn-primary btn-sm"  (click)="agregarAsignatura(carrera,asignatura)">Agregar </button>
+              </div>
+            </div>
+          </ng-template>
+      </accordion-group>
+    </div>
+     
+  </accordion>
+  
+  
+  
+  -->
