--- a/src/app/director/asignar-previa/asignar-previa.component.html
+++ b/src/app/director/asignar-previa/asignar-previa.component.html
@@ -1,21 +1,22 @@
 <accordion [closeOthers]="true">
   
   <div *ngFor="let carrera of carreras" >
-    <accordion-group heading="{{carrera.nombre}}">      
-      <div *ngFor="let asignaturaCarrera of carrera.asignaturaCarrera;let i = index" >
-        <button type="button" class="btn btn-primary btn-sm" (click)="seleccionarAsignatura(asignaturaCarrera.asignatura,carrera)">{{asignaturaCarrera.asignatura.nombre}}</button>
-        <p></p>
-        <!--<button type="button" class="btn btn-danger btn-sm " (click)="eliminarAsignatura(carrera,asignaturaCarrera.asignatura); carrera.asignaturaCarrera.splice(i,1)">Eliminar </button>-->
-      </div>
-      <p-pickList sourceHeader="Previas" targetHeader="Previas a Agregar" [source]="previas" [target]="posibles">
-          <ng-template let-previa pTemplate="item">
-              <div class="ui-helper-clearfix">
-                  <div >{{previa.asignatura.nombre}}</div>
-              </div>
-          </ng-template>
-      </p-pickList>
+    <accordion-group heading="{{carrera.nombre}}" (isOpenChange)='cargarAsignaturas(carrera)'>   
+      <accordion>
+        <div *ngFor="let asignatura of asignaturas;let i = index" >
+          <accordion-group heading="{{asignatura.nombre}}" (isOpenChange)='cargarPrevias(asignatura)'>
+            <p-pickList [responsive]="true" sourceHeader="Previas" targetHeader="Previas a Agregar" [source]="previas" [target]="previasPosibles"
+                    (onMoveToSource)="onMoveToSource($event)">
+                <ng-template let-previa pTemplate="item">
+                    <div class="ui-helper-clearfix">
+                        <div >{{previa.nombre}}</div>
+                    </div>
+                </ng-template>
+            </p-pickList>
+          </accordion-group>
+        </div>
+      </accordion>   
     </accordion-group>
-  </div>
-   
+  </div>   
 </accordion>
 
