--- a/src/app/director/lista-asignaturas/lista-asignaturas.component.html
+++ b/src/app/director/lista-asignaturas/lista-asignaturas.component.html
@@ -12,10 +12,12 @@
                 <td>{{asignatura.nombre}}</td>
                 <td>{{asignatura.codigo}}</td>
                 <td>{{asignatura.descripcion}}</td>              
-                <td><button class="btn btn-danger" (click)="borrarAsignatura(asignatura)" confirm="Are you sure?" >Delete</button>
-                    <button class="btn btn-primary" (click)="editarAsignatura(asignatura)">Edit</button></td>
+                <td *ngIf="esDirector"><button class="btn btn-danger" (click)="borrarAsignatura(asignatura)" confirm="Are you sure?" >Borrar</button></td>
+                <td *ngIf="esDirector"><button class="btn btn-primary" (click)="editarAsignatura(asignatura)">Editar</button></td>
             </tr>
         </tbody>
     </table>
-    <button class="btn btn-primary" (click)="agregarAsignatura()" >Nuevo</button>
+    <div *ngIf="esDirector">
+        <button class="btn btn-primary"  (click)="agregarAsignatura()" >Nuevo</button>
+    </div>
   </div>
