--- a/src/app/director/asignar-previa/asignar-previa.component.html
+++ b/src/app/director/asignar-previa/asignar-previa.component.html
@@ -2,7 +2,7 @@
   
   <div *ngFor="let carrera of carreras" >
     <accordion-group heading="{{carrera.nombre}}" (isOpenChange)='cargarAsignaturas(carrera)'>   
-      <accordion>
+      <accordion [closeOthers]="true">
         <div *ngFor="let asignatura of asignaturas;let i = index" >
           <accordion-group heading="{{asignatura.nombre}}" (isOpenChange)='cargarPrevias(asignatura)'>
             <p-pickList [responsive]="true" sourceHeader="Previas" targetHeader="Previas a Agregar" [source]="previas" [target]="previasPosibles"
