Inscribir y desistir examen y curso

--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -6,13 +6,11 @@
 		<label class="checkbox">
 			<input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
 		</label>
-		<button class="btn btn-lg btn-primary btn-block" (click)="login()" type="submit">Login</button>   
+		<button class="btn btn-lg btn-primary btn-block" (click)="login()" type="submit">Login</button>  
+		<alert *ngIf="alert" type="danger">
+				<strong>Intentelo nuevamente</strong> Username o Password incorrectos
+			  </alert> 
 	</form>
+	
 </div>
 
-
-<!--[(ngModel)]="username"-->
-
-<!--//[(ngModel)]="password"-->
-
-<!--(click)="login()"-->
