--- a/src/app/admin/cargar-usuarios/cargar-usuarios.component.html
+++ b/src/app/admin/cargar-usuarios/cargar-usuarios.component.html
@@ -1,5 +1,30 @@
 <body>
-<div class="Block">
+
+  <p-fileUpload name="csv[]" chooseLabel="Elegir" uploadLabel="Cargar" cancelLabel="Cancelar" (onSelect)="onSelect($event)" customUpload="true" (uploadHandler)="myUploader($event)" maxFileSize="1000000">
+    <ng-template pTemplate="content">
+      <ul *ngIf="resultado">
+        <li *ngFor="let data of resultado">{{data[0]}}-{{data[1]}}-{{data[3]}}{{data[4]}}-{{data[7]}}  </li>
+      </ul>
+    </ng-template>
+  </p-fileUpload>
+
+
+
+
+
+</body>
+
+
+
+
+
+
+<!--
+
+
+
+
+  <div class="Block">
   <input class="btn btn-success"  type="file" id="csv" (change)="onFileChange($event)" #fileInput>
   <p></p>
   <button class="btn btn-info" (click)="openModal(template)">Usuarios a Agregar</button>
@@ -20,4 +45,4 @@
   
   <button cla (click)="cargar()">Cargar</button>
 </div>
-</body>
+-->
