--- a/src/app/director/grafo/grafo.component.html
+++ b/src/app/director/grafo/grafo.component.html
@@ -1,7 +1,9 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/1.8.32/go-debug.js"></script>
-<script src='./grafo.js'>
-            </script>
+
+<body>
+
+        <div id="myDiagramDiv" class="diagramStyling" style="width:950px; height:500px"></div>
+        
+        
 
 
-
-<div id="myDiagramDiv" class="diagramStyling" style="width:750px; height:500px"></div>
+</body>
