--- a/src/app/director/grafo/grafo.component.html
+++ b/src/app/director/grafo/grafo.component.html
@@ -1,9 +1,2 @@
-
-<body>
-
-        <div id="myDiagramDiv" class="diagramStyling" style="width:950px; height:500px"></div>
-        
-        
-
-
-</body>
+<div id="carrera" class="diagrama"></div>
+<div id="asignatura" class="diagrama"></div>
