--- a/src/app/student/body-student/body-student.component.html
+++ b/src/app/student/body-student/body-student.component.html
@@ -5,7 +5,8 @@
         <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Asignaturas</a>
         <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Previas</a>
         <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Inscripcion a Curso</a>
-        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings2" role="tab" aria-controls="settings">Inscripcion a Examen</a>
+        <a class="list-group-item list-group-item-action" id="list-settings-list2" data-toggle="list" href="#list-settings2" role="tab" aria-controls="settings">Inscripcion a Examen</a>
+        <a class="list-group-item list-group-item-action" id="list-settings-list3" data-toggle="list" href="#list-settings3" role="tab" aria-controls="settings">Calendario</a>
       </div>
     </div>
   
@@ -16,6 +17,7 @@
         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><h1 class="text-center">PREVIAS</h1></div>
         <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">INSCRIPCION A CURSO</h1><app-lista-cursos></app-lista-cursos></div>
         <div class="tab-pane fade" id="list-settings2" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">INSCRIPCION A EXAMEN</h1><app-lista-examenes></app-lista-examenes></div>
+        <div class="tab-pane fade" id="list-settings3" role="tabpanel" aria-labelledby="list-settings-list"><h1 class="text-center">CALENDARIO</h1><app-calendario></app-calendario></div>
       </div>
     </div>
   
