Grafo de Previas OK

--- a/src/app/director/grafo/grafo.component.html
+++ b/src/app/director/grafo/grafo.component.html
@@ -1,2 +1,9 @@
-<div id="carrera" class="diagrama"></div>
-<div id="asignatura" class="diagrama"></div>
+
+
+<h5 class="first">Seleccione una Carrera</h5>
+<p-dropdown (onChange)="onChange()" [options]="carreras" [(ngModel)]="carrera" placeholder="Seleccione una carrera" optionLabel="nombre" ></p-dropdown>
+<p>Carrera: {{carrera ? carrera.nombre : 'ninguna'}}</p>
+
+
+<div id="carreraDiagram" class="diagrama"></div>
+<div id="asignaturaDiagram" class="diagrama"></div>
