--- a/src/app/director/asignatura-form/asignatura-form.component.html
+++ b/src/app/director/asignatura-form/asignatura-form.component.html
@@ -36,6 +36,10 @@
                                 <div *ngIf="f.codigo.errors.required">Codigo es requerido</div>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label>Taller</label><p></p>
+                            <p-checkbox formControlName="taller" [(ngModel)]="asignatura.taller" binary="true"></p-checkbox>
+                          </div>
 
 
                         
