--- a/src/app/student/calendario/calendario.component.html
+++ b/src/app/student/calendario/calendario.component.html
@@ -1,4 +1,10 @@
-<p>Display event : {{displayEvent | json}}</p>
+<div *ngIf="displayEvent">
+  <div *ngIf="displayEvent.event">
+    <p>Evento : {{displayEvent.event.title | json}}</p>
+
+  </div>
+</div>
+
 <div *ngIf="calendarOptions">
   <ng-fullcalendar #ucCalendar [options]="calendarOptions" (eventClick)="eventClick($event.detail)" (eventDrop)="updateEvent($event.detail)"
     (eventResize)="updateEvent($event.detail)" (clickButton)="clickButton($event.detail)"></ng-fullcalendar>
