--- a/src/app/admin/usuario-form/usuario-form.component.html
+++ b/src/app/admin/usuario-form/usuario-form.component.html
@@ -69,6 +69,12 @@
                                 </select>
                             </div>
                             <div class="form-group">
+                                <label>Foto</label>
+                                <p-fileUpload name="demo[]" [showUploadButton]="false" multiple="multiple"
+                                (onSelect)="onSelect($event)"  accept="image/*" maxFileSize="100000">
+                                </p-fileUpload>
+                            </div>
+                            <div class="form-group">
                                 <button class="btn btn-primary">Agregar</button>
                             </div>
                         </form>
