--- a/src/app/student/perfil/perfil.component.html
+++ b/src/app/student/perfil/perfil.component.html
@@ -5,6 +5,12 @@
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
                         <h3>Perfil</h3>
+                        <div class="form-group">
+                                <label>Foto</label>
+                                <p-fileUpload name="demo[]" [showUploadButton]="false" multiple="multiple"
+                                (onSelect)="onSelect($event)"  accept="image/*" maxFileSize="100000">
+                                </p-fileUpload>
+                            </div>
                         <form id="registerForm" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                             <div class="form-group">
                                 <label>Nombre</label>
@@ -42,7 +48,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Password</label>
-                                <input type="password" formControlName="password" class="form-control" [(ngModel)]="estudiante.password" [ngClass]="{ 'is-invalid': (submitted ||  f.password.touched) && f.password.errors }" />
+                                <input type="password" formControlName="password" class="form-control" [(ngModel)]="estudiante.password " [ngClass]="{ 'is-invalid': (submitted ||  f.password.touched) && f.password.errors }" />
                                 <div *ngIf="f.password.invalid && (f.password.dirty || f.password.touched || submitted)" class="invalid-feedback">
                                     <div *ngIf="f.password.errors.required">Password es requerido</div>
                                     <div *ngIf="f.password.errors.minlength">Password debe tener al menos 6 caracteres</div>
