--- a/src/app/director/asignatura-editar/asignatura-editar.component.html
+++ b/src/app/director/asignatura-editar/asignatura-editar.component.html
@@ -19,7 +19,7 @@
             <textarea type="text" name="descripcion" class="form-control"  [(ngModel)]="asignatura.descripcion"></textarea>
         </div>
         <input type="submit" value="Guardar" class="btn btn-primary">
-        <button (click)="cancelar()" class="btn btn-default">Cancel</button>
+        <button (click)="cancelar()" class="btn btn-default">Cancelar</button>
     </form>
     
   </div> 
