--- a/src/app/admin/usuario-form/usuario-form.component.html
+++ b/src/app/admin/usuario-form/usuario-form.component.html
@@ -76,6 +76,7 @@
                             </div>
                             <div class="form-group">
                                 <button class="btn btn-primary">Agregar</button>
+                                <button (click)="cancelar()" class="btn btn-default">Cancelar</button>
                             </div>
                         </form>
                     </div>
