--- a/src/app/director/carrera-editar/carrera-editar.component.html
+++ b/src/app/director/carrera-editar/carrera-editar.component.html
@@ -19,7 +19,7 @@
             <textarea type="text" name="creditosMinimos" class="form-control" disabled [(ngModel)]="carrera.creditosMinimos"></textarea>
         </div>
         <input type="submit" value="Guardar" class="btn btn-primary">
-        <button (click)="cancelar()" class="btn btn-default">Cancel</button>
+        <button (click)="cancelar()" class="btn btn-default">Cancelar</button>
     </form>
     
   </div> 
