--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~fullcalendar/dist/fullcalendar.min.css";
+@import '../node_modules/fullcalendar/dist/fullcalendar.min.css';
+/* @import '../node_modules/primeng/resources/themes/bootstrap/theme.css'; */
+/* @import '../node_modules/primeng/resources/primeng.min.css'; */
+@import 'bootstrap.min.css';
+
+button[icon|="pi pi-angle-double"] {
+    display: none !important;
+}
