--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="wrapper">
-	<form class="form-signin">       
-		<h2 class="form-signin-heading">Please login</h2>
-		<input type="text" class="form-control" [(ngModel)]="username" name="username"  placeholder="username" required="" autofocus="" />
-		<input type="password" class="form-control" [(ngModel)]="password" name="password"  placeholder="Password" required=""/>      
-		<label class="checkbox">
-			<input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
-		</label>
-		
-		<button class="btn btn-lg btn-primary btn-block" (click)="login()" type="submit">Login</button>  
-		<alert *ngIf="alert" type="danger">
-				<strong>Intentelo nuevamente</strong> Username o Password incorrectos
-			  </alert> 
-	</form>
-	
-</div>
+  <form class="form-signin">
+    <img src="assets/img/TecnoLogoVertNegro.png" width="100%">
+    <input type="text" class="form-control" [(ngModel)]="username" name="username" placeholder="username" required=""
+      autofocus="" />
+    <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Password" required="" />
+    <label class="checkbox">
+      <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Recordarme
+    </label>
 
+    <button class="btn btn-lg btn-primary btn-block" (click)="login()" type="submit">Ingresar</button>
+    <alert *ngIf="alert" type="danger">
+      <strong>Intentelo nuevamente</strong> Username o Password incorrectos
+    </alert>
+  </form>
+
+</div>
