--- a/src/app/director/carrera-form/carrera-form.component.html
+++ b/src/app/director/carrera-form/carrera-form.component.html
@@ -41,6 +41,8 @@
                         
                         <div class="form-group">
                               <button  class="btn btn-primary ">Agregar</button>
+                              <button (click)="cancelar()" class="btn btn-default">Cancelar</button>
+
                             
                       </div>
                   </form>
