--- a/src/app/admin/usuario-editar/usuario-editar.component.html
+++ b/src/app/admin/usuario-editar/usuario-editar.component.html
@@ -8,7 +8,7 @@
     <form (ngSubmit)="editar()">
         <div class="form group">
             <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" class="form-control " disabled [(ngModel)]="usuario.nombre">
+            <input type="text" name="nombre" class="form-control "  [(ngModel)]="usuario.nombre">
         </div>
         <div class="form group">
             <label for="apellido">Apellido</label>
@@ -16,7 +16,7 @@
         </div>
         <div class="form group">
             <label for="username">Username</label>
-            <input type="text" name="username" class="form-control"  [(ngModel)]="usuario.username">
+            <input type="text" name="username" class="form-control" disabled  [(ngModel)]="usuario.username">
         </div>
         <div class="form group">
             <label for="cedula">Cedula</label>
