--- a/src/app/director/asignatura-form/asignatura-form.component.html
+++ b/src/app/director/asignatura-form/asignatura-form.component.html
@@ -31,6 +31,8 @@
                           </div>                        
                         <div class="form-group">
                               <button  class="btn btn-primary ">Agregar</button>
+                              <button (click)="cancelar()" class="btn btn-default">Cancelar</button>
+
                             
                       </div>
                   </form>
