--- a/src/app/shared/reset/reset.component.html
+++ b/src/app/shared/reset/reset.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
         <div class="container">
             <div class="row">
                 <div class="col-md-4 offset-md-3">
