--- a/src/app/student/perfil/perfil.component.html
+++ b/src/app/student/perfil/perfil.component.html
@@ -62,6 +62,8 @@
                             </div>
                             <div class="form-group">
                                 <button class="btn btn-primary">Agregar</button>
+                                <button (click)="cancelar()" class="btn btn-default">Cancelar</button>
+
                             </div>
                         </form>
                     </div>
